--- a/src/loader.html
+++ b/src/loader.html
@@ -20,7 +20,7 @@
       <button id="password-visibility">Toggle password visibility</button>
     <hr />
       <b>Important</b> <br />
-      The default commands to exit (Cmd+Q) have been disabled. To quit the kiosk mode, you will need to hit Cmd/Ctrl + P.
+      The default commands to exit (Cmd+Q) have been disabled. To quit the kiosk mode, you will need to hit Cmd/Ctrl + P and enter the password above.
     <hr />
       <button id="submit" type="submit">Open Kiosk</button>
       <button type="reset">Clear</button>
